# paystack

./: CHANGELOG.md  LICENSE  Makefile  README.md  api_client.go  api_client_test.go  apple_pay_client.go  apple_pay_client_test.go  bulk_charges_client.go  charge_client.go  constants.go  customer_client.go  dedicated_virtual_account_client.go  dispute_client.go  doc.go  go.mod  index.html  integration_client.go  miscellaneous_client.go  mkdocs.yml  optional_parameters.go  optional_payloads.go  payment_pages_client.go  payment_request.go  payment_request_client.go  plan_client.go  product_client.go  product_client_test.go  products.go  pyproject.toml  queries.go  refund_client.go  rest_client.go  settlement_client.go  settlements.go  sub_account_client.go  subscription_client.go  terminal_client.go  transaction_client.go  transaction_client_test.go  (+6 more)
client/: api_client.go  api_client_test.go  apple_pay_client.go  apple_pay_client_test.go  bulk_charges_client.go  charge_client.go  customer_client.go  dedicated_virtual_account_client.go  dispute_client.go  integration_client.go  miscellaneous_client.go  optional_parameters.go  payment_pages_client.go  payment_request_client.go  plan_client.go  product_client.go  product_client_test.go  query_parameters.go  refund_client.go  rest_client.go  settlement_client.go  sub_account_client.go  subscription_client.go  terminal_client.go  transaction_client.go  transaction_client_test.go  transaction_split_client.go  transfer_client.go  transfer_control_client.go  transfer_recipient.go  verification_client.go
docs/: api-reference.md  (+4 more)
(+17 files in other folders)
